--- a/index.html
+++ b/index.html
@@ -5,32 +5,13 @@
   <meta charset="UTF-8">
   <title>NeoOS 26 — Official Site</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <style>
-    :root {
-      --bg: #f5f5f7;
-      --card: #ffffff;
-      --text-main: #1d1d1f;
-      --text-sub: #6e6e73;
-      --accent: #0071e3;
-      --accent-soft: #e5f0ff;
-      --border-soft: #d2d2d7;
-      --shadow-soft: 0 18px 40px rgba(0,0,0,0.08);
-      --radius-lg: 28px;
-      --radius-md: 18px;
-      --radius-pill: 999px;
-    }
-
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-
     body {
-      font-family: -apple-system, BlinkMacSystemFont, "SF Pro Text", system-ui, sans-serif;
-      background: var(--bg);
-      color: var(--text-main);
       margin: 0;
+      font-family: -apple-system, BlinkMacSystemFont, "SF Pro Text", system-ui, sans-serif;
+      background: #f5f5f7;
+      color: #1d1d1f;
     }
 
     .page {
@@ -39,11 +20,11 @@
       padding: 32px 20px 60px;
     }
 
-    /* Top bar */
+    /* NAVIGATION */
     .nav {
       display: flex;
-      align-items: center;
       justify-content: space-between;
+      align-items: center;
       padding-bottom: 18px;
     }
 
@@ -66,29 +47,30 @@
       letter-spacing: 0.04em;
       font-size: 14px;
       text-transform: uppercase;
-      color: var(--text-sub);
+      color: #6e6e73;
     }
 
     .nav-links {
       display: flex;
       gap: 18px;
+    }
+
+    .nav-links a {
+      text-decoration: none;
+      color: #6e6e73;
       font-size: 13px;
-      color: var(--text-sub);
+      cursor: pointer;
     }
 
-    .nav-links span {
-      cursor: default;
-    }
-
-    /* Hero */
+    /* HERO */
     .hero {
       margin-top: 18px;
       background: linear-gradient(145deg, #ffffff, #f3f5ff);
-      border-radius: var(--radius-lg);
-      box-shadow: var(--shadow-soft);
+      border-radius: 28px;
+      box-shadow: 0 18px 40px rgba(0,0,0,0.08);
       padding: 40px 26px 34px;
       display: grid;
-      grid-template-columns: minmax(0, 1.2fr) minmax(0, 1fr);
+      grid-template-columns: 1fr 1fr;
       gap: 20px;
       align-items: center;
     }
@@ -96,7 +78,6 @@
     @media (max-width: 800px) {
       .hero {
         grid-template-columns: 1fr;
-        padding: 32px 22px 28px;
       }
     }
 
@@ -104,393 +85,31 @@
       font-size: 13px;
       text-transform: uppercase;
       letter-spacing: 0.16em;
-      color: var(--accent);
+      color: #0071e3;
       font-weight: 600;
       margin-bottom: 10px;
     }
 
     .hero-title {
       font-size: 44px;
-      line-height: 1.05;
       font-weight: 700;
-      letter-spacing: -0.03em;
       margin-bottom: 10px;
     }
 
     .hero-subtitle {
       font-size: 20px;
-      color: var(--text-sub);
+      color: #6e6e73;
       margin-bottom: 18px;
       max-width: 420px;
     }
 
     .hero-tagline {
       font-size: 16px;
-      color: var(--text-main);
       margin-bottom: 22px;
     }
 
     .hero-buttons {
       display: flex;
+      gap: 10px;
       flex-wrap: wrap;
-      gap: 10px;
-      margin-bottom: 14px;
-    }
-
-    .btn-primary {
-      background: var(--accent);
-      color: #ffffff;
-      border-radius: var(--radius-pill);
-      padding: 9px 20px;
-      font-size: 14px;
-      border: none;
-      cursor: default;
-      box-shadow: 0 10px 25px rgba(0,113,227,0.35);
-    }
-
-    .btn-ghost {
-      border-radius: var(--radius-pill);
-      padding: 9px 18px;
-      font-size: 14px;
-      border: 1px solid var(--border-soft);
-      background: rgba(255,255,255,0.7);
-      color: var(--text-main);
-      cursor: default;
-    }
-
-    .hero-note {
-      font-size: 12px;
-      color: var(--text-sub);
-    }
-
-    /* Hero visual */
-    .hero-card {
-      background: radial-gradient(circle at 0% 0%, #ffffff, #e6ecff);
-      border-radius: 24px;
-      padding: 18px 18px 16px;
-      border: 1px solid rgba(255,255,255,0.8);
-      box-shadow: 0 16px 40px rgba(0,0,0,0.12);
-      position: relative;
-      overflow: hidden;
-    }
-
-    .hero-window {
-      background: rgba(255,255,255,0.9);
-      border-radius: 18px;
-      border: 1px solid rgba(210,210,215,0.9);
-      padding: 14px 14px 16px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.08);
-    }
-
-    .window-top {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      margin-bottom: 10px;
-    }
-
-    .window-dots {
-      display: flex;
-      gap: 6px;
-    }
-
-    .dot {
-      width: 9px;
-      height: 9px;
-      border-radius: 50%;
-    }
-
-    .dot.red { background: #ff5f57; }
-    .dot.yellow { background: #febc2e; }
-    .dot.green { background: #28c840; }
-
-    .window-title {
-      font-size: 11px;
-      color: var(--text-sub);
-    }
-
-    .window-body {
-      border-radius: 12px;
-      background: linear-gradient(145deg, #f5f7ff, #ffffff);
-      padding: 16px 14px 14px;
-    }
-
-    .desktop-bar {
-      display: flex;
-      justify-content: space-between;
-      font-size: 11px;
-      color: var(--text-sub);
-      margin-bottom: 10px;
-    }
-
-    .desktop-main {
-      border-radius: 12px;
-      background: rgba(255,255,255,0.9);
-      border: 1px solid rgba(210,210,215,0.9);
-      padding: 12px;
-      display: grid;
-      grid-template-columns: 1.2fr 1fr;
-      gap: 10px;
-    }
-
-    .desktop-left-title {
-      font-size: 13px;
-      font-weight: 600;
-      margin-bottom: 4px;
-    }
-
-    .desktop-left-text {
-      font-size: 11px;
-      color: var(--text-sub);
-      line-height: 1.4;
-    }
-
-    .desktop-pill {
-      display: inline-flex;
-      align-items: center;
-      gap: 6px;
-      border-radius: 999px;
-      background: var(--accent-soft);
-      color: var(--accent);
-      font-size: 10px;
-      padding: 4px 9px;
-      margin-top: 8px;
-    }
-
-    .desktop-right {
-      display: flex;
-      flex-direction: column;
-      gap: 6px;
-      font-size: 10px;
-      color: var(--text-sub);
-    }
-
-    .meter {
-      height: 6px;
-      border-radius: 999px;
-      background: #e5e5ea;
-      overflow: hidden;
-    }
-
-    .meter-fill {
-      height: 100%;
-      border-radius: inherit;
-      background: linear-gradient(90deg, #34c759, #0071e3);
-      width: 68%;
-    }
-
-    .dock {
-      margin-top: 12px;
-      border-radius: 999px;
-      background: rgba(255,255,255,0.9);
-      border: 1px solid rgba(210,210,215,0.9);
-      padding: 6px 10px;
-      display: flex;
-      justify-content: center;
-      gap: 8px;
-    }
-
-    .dock-icon {
-      width: 18px;
-      height: 18px;
-      border-radius: 6px;
-      background: linear-gradient(145deg, #4b8dff, #9ac3ff);
-      box-shadow: 0 4px 10px rgba(0,0,0,0.18);
-    }
-
-    .dock-icon.secondary {
-      background: linear-gradient(145deg, #ff8a5c, #ffd1a3);
-    }
-
-    .dock-icon.tertiary {
-      background: linear-gradient(145deg, #34c759, #a8f0c5);
-    }
-
-    .hero-chip {
-      position: absolute;
-      right: 14px;
-      bottom: 12px;
-      font-size: 11px;
-      padding: 6px 10px;
-      border-radius: 999px;
-      background: rgba(0,0,0,0.75);
-      color: #f5f5f7;
-      backdrop-filter: blur(10px);
-    }
-
-    /* Features */
-    .features {
-      margin-top: 34px;
-      display: grid;
-      grid-template-columns: repeat(3, minmax(0, 1fr));
-      gap: 16px;
-    }
-
-    @media (max-width: 900px) {
-      .features {
-        grid-template-columns: 1fr;
-      }
-    }
-
-    .feature-card {
-      background: var(--card);
-      border-radius: var(--radius-md);
-      padding: 18px 18px 16px;
-      border: 1px solid rgba(210,210,215,0.9);
-      box-shadow: 0 10px 26px rgba(0,0,0,0.06);
-    }
-
-    .feature-label {
-      font-size: 11px;
-      text-transform: uppercase;
-      letter-spacing: 0.16em;
-      color: var(--text-sub);
-      margin-bottom: 6px;
-    }
-
-    .feature-title {
-      font-size: 17px;
-      font-weight: 600;
-      margin-bottom: 6px;
-    }
-
-    .feature-text {
-      font-size: 13px;
-      color: var(--text-sub);
-      line-height: 1.5;
-    }
-
-    /* Footer */
-    .footer {
-      margin-top: 32px;
-      font-size: 11px;
-      color: var(--text-sub);
-      border-top: 1px solid rgba(210,210,215,0.8);
-      padding-top: 14px;
-      display: flex;
-      flex-direction: column;
-      gap: 4px;
-    }
-
-    .footer span {
-      display: block;
-    }
-  </style>
-</head>
-<body>
-  <div class="page">
-    <!-- Top bar -->
-    <div class="nav">
-      <div class="nav-left">
-        <div class="logo-dot"></div>
-        <div class="nav-title">NeoOS</div>
-      </div>
-      <div class="nav-links">
-        <span>Overview</span>
-        <span>Features</span>
-        <span>Download (coming soon)</span>
-      </div>
-    </div>
-
-    <!-- Hero -->
-    <div class="hero">
-      <div>
-        <div class="hero-label">NeoOS 26</div>
-        <div class="hero-title">Pure. Powerful. Original.</div>
-        <div class="hero-subtitle">A modern, fast, and beautifully designed Linux experience inspired by premium desktop design.</div>
-        <div class="hero-tagline">Built on Ubuntu, refined with the NeoOS design language, and crafted for focus, comfort, and creativity.</div>
-
-        <div class="hero-buttons">
-          <button class="btn-primary">Download NeoOS 26 (soon)</button>
-          <button class="btn-ghost">Read the launch announcement</button>
-        </div>
-
-        <div class="hero-note">NeoOS 26 was officially launched on February 5, 2026.</div>
-      </div>
-
-      <div class="hero-card">
-        <div class="hero-window">
-          <div class="window-top">
-            <div class="window-dots">
-              <div class="dot red"></div>
-              <div class="dot yellow"></div>
-              <div class="dot green"></div>
-            </div>
-            <div class="window-title">NeoOS Desktop · Preview</div>
-          </div>
-          <div class="window-body">
-            <div class="desktop-bar">
-              <span>NeoOS 26 · GNOME</span>
-              <span>Fast · Smooth · Polished</span>
-            </div>
-            <div class="desktop-main">
-              <div>
-                <div class="desktop-left-title">A calm, focused workspace.</div>
-                <div class="desktop-left-text">
-                  NeoOS 26 brings a clean, distraction‑free desktop with smooth animations,
-                  unified theming, and a refined layout that feels instantly familiar.
-                </div>
-                <div class="desktop-pill">
-                  <span>●</span>
-                  <span>Optimized for everyday use</span>
-                </div>
-              </div>
-              <div class="desktop-right">
-                <span>Boot time: tuned for speed</span>
-                <div class="meter"><div class="meter-fill"></div></div>
-                <span>Visual polish: custom icons, splash, and login screen</span>
-                <span>App support: native, Flatpak, AppImage, and Windows apps (via tools)</span>
-              </div>
-            </div>
-            <div class="dock">
-              <div class="dock-icon"></div>
-              <div class="dock-icon secondary"></div>
-              <div class="dock-icon tertiary"></div>
-              <div class="dock-icon"></div>
-              <div class="dock-icon secondary"></div>
-            </div>
-          </div>
-        </div>
-        <div class="hero-chip">NeoOS 26 · Preview layout</div>
-      </div>
-    </div>
-
-    <!-- Features -->
-    <div class="features">
-      <div class="feature-card">
-        <div class="feature-label">Design</div>
-        <div class="feature-title">A unified, premium look.</div>
-        <div class="feature-text">
-          NeoOS 26 introduces a cohesive visual identity across the desktop, from the boot splash
-          and login screen to icons, accents, and window styling. Everything feels like it belongs together.
-        </div>
-      </div>
-
-      <div class="feature-card">
-        <div class="feature-label">Experience</div>
-        <div class="feature-title">Fast, simple, and familiar.</div>
-        <div class="feature-text">
-          Built on Ubuntu with a refined GNOME experience, NeoOS 26 is designed to be easy to use,
-          responsive on everyday hardware, and comfortable for long sessions of work, study, or creation.
-        </div>
-      </div>
-
-      <div class="feature-card">
-        <div class="feature-label">Apps</div>
-        <div class="feature-title">Your software, your way.</div>
-        <div class="feature-text">
-          NeoOS supports native Linux apps, Flatpak, AppImage, and Windows apps through additional tools,
-          so you can build a setup that matches how you actually use your computer.
-        </div>
-      </div>
-    </div>
-
-    <!-- Footer -->
-    <div class="footer">
-      <span>NeoOS 26 — a modern Linux experience with a focus on design, clarity, and comfort.</span>
-      <span>Ubuntu is a registered trademark of Canonical Ltd. NeoOS is an independent project and is not affiliated with Canonical.</span>
-      <span>All names and logos are used for identification purposes only.</span>
-    </div>
-  </div>
-</body>
-</html>
+      margin
