--- a/index.html
+++ b/index.html
@@ -155,6 +155,32 @@
         <p>Supports native apps, Flatpak, AppImage, and more.</p>
       </div>
     </div>
+<!-- DOWNLOAD SECTION -->
+<div id="download" style="
+  margin-top: 40px;
+  background: white;
+  padding: 30px;
+  border-radius: 16px;
+  box-shadow: 0 10px 26px rgba(0,0,0,0.06);
+  text-align: center;
+">
+  <h2 style="margin-bottom: 10px;">Download NeoOS 26</h2>
+  <p style="color:#6e6e73; margin-bottom: 20px;">
+    The ISO will be available soon. Stay tuned!
+  </p>
+
+  <a href="#" style="
+    display:inline-block;
+    padding: 10px 20px;
+    background:#0071e3;
+    color:white;
+    border-radius:999px;
+    text-decoration:none;
+    font-size:14px;
+  ">
+    Download (coming soon)
+  </a>
+</div>
 
     <!-- FOOTER -->
     <div class="footer">
