--- a/index.html
+++ b/index.html
@@ -138,8 +138,12 @@
       <a href="#announcement" class="btn btn-outline">Launch Announcement</a>
     </div>
 
-    <!-- FEATURES -->
-    <div class="features" id="features">
+    <<div class="feature">
+  <h3>Smart Performance</h3>
+  <p>NeoOS 26 automatically optimizes background tasks, reduces memory usage, and keeps your system smooth even on older hardware.</p>
+</div>
+!-- FEATURES -->
+    
       <div class="feature">
         <h3>Premium Design</h3>
         <p>A unified visual identity across the entire desktop.</p>
