--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,132 +8,166 @@
   <style>
     body {
       margin: 0;
-      font-family: 'SamsungOne', 'Segoe UI', sans-serif;
-      background: #000;
-      color: #fff;
+      font-family: -apple-system, BlinkMacSystemFont, "SF Pro Text", system-ui, sans-serif;
+      background: #f5f5f7;
+      color: #1d1d1f;
     }
 
+    /* NAVIGATION */
+    .nav {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 14px 20px;
+      background: #fff;
+      box-shadow: 0 1px 6px rgba(0,0,0,0.06);
+      position: sticky;
+      top: 0;
+      z-index: 100;
+    }
+
+    .nav .logo {
+      font-weight: 600;
+      font-size: 16px;
+      letter-spacing: 0.04em;
+    }
+
+    .nav-links {
+      display: flex;
+      gap: 20px;
+    }
+
+    .nav-links a {
+      text-decoration: none;
+      color: #1d1d1f;
+      font-size: 14px;
+    }
+
+    /* HERO BANNER */
     .hero {
-      background: #000;
+      background: linear-gradient(to right, #e5f0ff, #ffffff);
+      padding: 80px 20px 60px;
       text-align: center;
-      padding: 100px 20px 60px;
     }
 
     .hero h1 {
-      font-size: 56px;
+      font-size: 44px;
       font-weight: 700;
-      margin-bottom: 20px;
+      margin-bottom: 10px;
     }
 
     .hero p {
-      font-size: 22px;
-      color: #ccc;
-      max-width: 700px;
-      margin: auto;
-      margin-bottom: 40px;
-    }
-
-    .btn {
-      display: inline-block;
-      padding: 14px 28px;
-      border-radius: 999px;
-      font-size: 16px;
-      text-decoration: none;
-      background: #0071e3;
-      color: #fff;
-      box-shadow: 0 10px 25px rgba(0,113,227,0.35);
-      transition: background 0.3s ease;
-    }
-
-    .btn:hover {
-      background: #005bb5;
-    }
-
-    .section {
-      background: #fff;
-      color: #1d1d1f;
-      padding: 80px 20px;
-      text-align: center;
-    }
-
-    .section h2 {
-      font-size: 36px;
-      margin-bottom: 20px;
-    }
-
-    .section p {
       font-size: 18px;
       color: #6e6e73;
-      max-width: 700px;
+      max-width: 600px;
       margin: auto;
+      margin-bottom: 30px;
     }
 
+    .hero .btn {
+      display: inline-block;
+      background: #0071e3;
+      color: white;
+      padding: 12px 24px;
+      border-radius: 999px;
+      text-decoration: none;
+      font-size: 14px;
+      box-shadow: 0 10px 25px rgba(0,113,227,0.35);
+    }
+
+    /* PROMO MESSAGE */
+    .promo {
+      background: #fff;
+      text-align: center;
+      padding: 16px;
+      font-size: 13px;
+      color: #6e6e73;
+      border-bottom: 1px solid #d2d2d7;
+    }
+
+    /* FEATURE GRID */
     .features {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
       gap: 24px;
-      margin-top: 40px;
-      padding: 0 20px;
+      padding: 40px 20px;
+      background: #fff;
     }
 
     .feature {
-      background: #f5f5f7;
+      background: #f9f9fa;
       border-radius: 16px;
-      padding: 30px;
+      padding: 20px;
+      text-align: center;
       box-shadow: 0 6px 20px rgba(0,0,0,0.06);
     }
 
     .feature h3 {
-      font-size: 20px;
-      margin-bottom: 10px;
+      font-size: 16px;
+      margin-bottom: 6px;
     }
 
     .feature p {
-      font-size: 15px;
+      font-size: 13px;
       color: #6e6e73;
     }
 
+    /* FOOTER */
     footer {
-      background: #000;
-      color: #888;
+      background: #f5f5f7;
       text-align: center;
       padding: 30px 20px;
       font-size: 12px;
+      color: #6e6e73;
+      border-top: 1px solid #d2d2d7;
     }
   </style>
 </head>
 <body>
 
-  <div class="hero">
-    <h1>NeoOS 26</h1>
-    <p>A clean, fluid, and visually polished Linux experience — built on Ubuntu 25 and refined with NeoOS design language.</p>
-    <a href="#download" class="btn">Download (Coming Soon)</a>
-  </div>
-
-  <div class="section" id="features">
-    <h2>Designed for Clarity and Comfort</h2>
-    <p>NeoOS 26 delivers smooth animations, a refined interface, and a fully unified theme across the desktop.</p>
-
-    <div class="features">
-      <div class="feature">
-        <h3>Premium Design</h3>
-        <p>Unified visual identity from boot splash to icons and window styling.</p>
-      </div>
-      <div class="feature">
-        <h3>Fast & Smooth</h3>
-        <p>Optimized for everyday use with a refined GNOME experience.</p>
-      </div>
-      <div class="feature">
-        <h3>App Freedom</h3>
-        <p>Supports native apps, Flatpak, AppImage, and Windows tools.</p>
-      </div>
-      <div class="feature">
-        <h3>Smart Performance</h3>
-        <p>NeoOS automatically optimizes background tasks and memory usage.</p>
-      </div>
+  <!-- NAV -->
+  <div class="nav">
+    <div class="logo">NeoOS</div>
+    <div class="nav-links">
+      <a href="#overview">Overview</a>
+      <a href="#features">Features</a>
+      <a href="#download">Download</a>
     </div>
   </div>
 
+  <!-- PROMO -->
+  <div class="promo">
+    NeoOS 26 launched February 5, 2026 — built for clarity, comfort, and creativity.
+  </div>
+
+  <!-- HERO -->
+  <div class="hero" id="overview">
+    <h1>NeoOS 26</h1>
+    <p>A modern, fast, and beautifully designed Linux experience built on Ubuntu 25 with the latest GNOME desktop.</p>
+    <a href="#download" class="btn">Download (Coming Soon)</a>
+  </div>
+
+  <!-- FEATURES -->
+  <div class="features" id="features">
+    <div class="feature">
+      <h3>Premium Design</h3>
+      <p>Unified visual identity from boot splash to icons.</p>
+    </div>
+    <div class="feature">
+      <h3>Fast & Smooth</h3>
+      <p>Optimized for everyday use with smooth animations.</p>
+    </div>
+    <div class="feature">
+      <h3>App Freedom</h3>
+      <p>Supports native apps, Flatpak, AppImage, and more.</p>
+    </div>
+    <div class="feature">
+      <h3>Smart Performance</h3>
+      <p>NeoOS automatically optimizes background tasks and memory usage.</p>
+    </div>
+  </div>
+
+  <!-- FOOTER -->
   <footer>
     NeoOS 26 — A modern Linux experience. Ubuntu is a trademark of Canonical Ltd. NeoOS is independent.
   </footer>
