--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
   <!-- PROMO -->
   <div class="promo">
-    NeoOS 26 launched February 5, 2026 — built for clarity, comfort, and creativity.
+    NeoOS 26 Will be launched on February 5, 2026 — built for clarity, comfort, and creativity.
   </div>
 
   <!-- HERO -->
