--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
   <!-- PROMO -->
   <div class="promo">
-    NeoOS 26 Will be launched on February 5, 2026 — built for clarity, comfort, and creativity.
+    NeoOS 26 Will be launched on late June, 2026 — built for clarity, comfort, and creativity.
   </div>
 
   <!-- HERO -->
@@ -168,7 +168,7 @@
 
   <!-- FOOTER -->
   <footer>
-    NeoOS 26 — A modern Linux experience. Ubuntu is a trademark of Canonical Ltd. NeoOS is independent.
+    NeoOS 26 — A modern Linux experience Based on Ubuntu is a trademark of Canonical Ltd. NeoOS is independent.
   </footer>
 
 </body>
